--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,6 +1,6 @@
 header{
     height: 100vh;
-    padding-top: 7rem;
+    padding-top: 4rem;
     overflow: hidden;
 }
 
@@ -39,11 +39,11 @@ header{
 /*----------me-----------*/
 .me{
    background: linear-gradient(var(--color-primary), transparent);
-   width: 22rem;
-   height: 30rem;
+   height: 300px;
+   width: 350px;
    position: absolute;
    left: calc(50% - 11rem);
-   margin-top: 4rem;
+   margin-top: 2rem;
    border-radius: 12rem 12rem 0 0;
    overflow: hidden;
    padding:1.5rem;
